# dangerzone

./: .gitattributes  .gitignore  .gitmodules  .grype.yaml  BUILD.md  CHANGELOG.md  Dockerfile  Dockerfile.env  Dockerfile.in  GEMINI.md  INSTALL.md  LICENSE  Makefile  PLAN.md  Pipfile  QA.md  README.md  RELEASE-SANDBOX.md  RELEASE.md  SECURITY.md  THIRD_PARTY_NOTICE  THIRD_PARTY_NOTICE.md  demo_deepseek_ocr.py  dodo.py  inventory.toml  plan.md  poetry.toml  prog_tests.py  pyproject.toml  setup-windows.py  setup.py  stdeb.cfg
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report_linux.yml  bug_report_macos.yml  bug_report_windows.yml  feature_request.md
.github/workflows/: build-push-image.yml  build.yml  check_pr.yml  check_push.yml  check_repos.yml  ci.yml  ci_macos.yml  close-issues.yml  github-build.yml  large-tests.yml  multi_arch_build.yml  release-container-image.yml  scan.trivy.yml  scan.yml  scan_released.trivy.yml  scan_released.yml
.well-known/: funding-manifest-urls
assets/: design-system.html  document-icon.xcf  logo.xcf
container/: Dockerfile  dangerzone.py  pixels-to-pdf
dangerzone/: __init__.py  args.py  capture_output.py  cli.py  common.py  container.py  container_utils.py  conversion_errors.py  ctx.py  deepseek_ocr.py  doc_selection_widget.py  docker_installer.py  document.py  errors.py  global_common.py  gui.py  isolation_provider.py  logic.py  main_window.py  rntime.py  settings.py  settings_widget.py  shutdown.py  startup.py  tasks.py  tasks_widget.py  util.py  wsl.py
dangerzone-converter/: Dockerfile  README.md  dangerzone.py
dangerzone-converter/.circleci/: config.yml
dangerzone-converter/scripts/: dangerzone.py  document-to-pixels  document-to-pixels-unpriv  pixels-to-pdf  pixels-to-pdf-unpriv
dangerzone-image/: .gitignore  Dockerfile  Dockerfile.in  README.md  THIRD_PARTY_NOTICE.md  build-image.py  freedomofpress-dangerzone.pub  freedomofpress-dangerzone.pub.asc  pyproject.toml
dangerzone-image/.github/: ci.yml
dangerzone-image/.github/workflows/: build-local.yml  ci.yml  release.yml  scan_nightly.yml  scan_released.yml
dangerzone-image/.github/workflows/actions/: build-push.yml
dangerzone-image/docs/: gvisor.md  reproducibility.md  sign-image.md
dangerzone-image/src/conversion/: doc_to_pixels.py
dangerzone-image/src/helpers/: entrypoint.py  repro-sources-list.sh
dangerzone-image/tests/: conftest.py  test_convert.py
dangerzone-image/tests/test_/: sample-hwp.hwp.b64  sample-hwp97.hwp.b64  sample-hwpx.hwpx.b64
dangerzone-image/tests/test_docs/: sample-doc.doc  sample-docm.docm  sample-hwp.hwp  sample-hwp97.hwp  sample-hwpx.hwpx  sample-mime-application-zip.xls  sample-mime-x-ole-storage.xls  sample-pnm.pnm
dangerzone-image/utils/: reproduce-image.py
dangerzone/container_helpers/: entrypoint.py
dangerzone/conversion/: common.py  doc_to_pixels.py  doc_to_pixels_qubes_wrapper.py  errors.py  pixels_to_pdf.py
dangerzone/gui/: __init__.py  application.py  background_task.py  common.py  docker_installer.py  gui_common.py  log_window.py  logic.py  main_window.py  run.py  settings_widget.py  shutdown.py  startup.py  systray.py  tasks.py  tasks_widget.py  updater.py  vm.py  waiting_widget.py  widgets.py
dangerzone/gvisor_wrapper/: entrypoint.py  sandboxed_entrypoint.sh
dangerzone/isolation_provider/: base.py  container.py  dummy.py  qubes.py  report.py
dangerzone/oci/: entrypoint.py
dangerzone/podman/: __init__.py  binary.py  cli.py  cli_runner.py  errors.py  machine.py  machine_manager.py
dangerzone/tests/: test_cli.py  test_global_common.py  test_util.py
dangerzone/updater/: __init__.py  attestations.py  cli.py  cosign.py  errors.py  installer.py  log_index.py  registry.py  releases.py  signatures.py  utils.py
dangerzone/windows/: shellexec.py  wsl.py
debian/: changelog  control  copyright  rules
debian/source/: options
dev_scripts/: README.md  apt-tools-prod.pref  apt-tools-prod.sources  containers.conf  dangerzone  dangerzone-cli.bat  dangerzone-container.bat  dangerzone-image  dangerzone-image.bat  dangerzone-machine  dangerzone-machine.bat  dangerzone-podman  dangerzone.bat  dev_utils.py  env.py  generate-release-notes.py  generate-release-tasks.py  inventory.py  merge_large_tests_results.py  oldstable-pu-debian.sources  oldstable-pu-ubuntu.sources  oldstable-pu.pref  pytest-wrapper.py  qa.py  registry.py  release-container-image.py  repro-build  repro-build.py  reproduce-image.py  sign-assets.py  storage.conf  upload-asset.py  verify-attestation.sh
dev_scripts/large_tests/: report.py  report.sh
docs/: conf.py  index.md  install.md  podman-desktop.md  security.md
docs/advisories/: 2023-10-25.md  2023-12-07.md  2024-12-24.md
docs/developer/: build.md  (+12 more)
qubes/: dz.Convert  dz.ConvertDev
rip_docker/: .gitignore  README.md  Vagrantfile  build-iso.sh  dangerzone.yml  genapkovl-dangerzone.sh  metadata.json  mkimg.dangerzone.sh  rip.py  run-vm.py  run-vm.sh
rust-wrapper/: CLI.md  Cargo.toml  IMPLEMENTATION.md  README.md  test_cli.sh
rust-wrapper/examples/: full_workflow.rs
rust-wrapper/src/: container.rs  lib.rs  pdf_reconstructor.rs  stream_reader.rs
rust-wrapper/tests/: cli_test.rs  integration_test.rs
share/: Containerfile  containers.conf  dangerzone.css  enable_docker_service.sh  freedomofpress-dangerzone.pub  image-name.txt  ocr-languages.json  seccomp.gvisor.bullseye.json  seccomp.gvisor.json  version.txt
test_docs/: sample.docx  sample.odt  sample.ppt  sample.tiff  sample.xlsx
tests/: __init__.py  conftest.py  fuzz_ipc_protocol.py  fuzz_ipc_standalone.py  test_cli.py  test_container_utils.py  test_cve_2026_3308.py  test_document.py  test_entrypoint_env.py  test_global_common.py  test_installer.py  test_ipc_protocol.py  test_large_set.py  test_media_conversion.py  test_media_conversion_bug.py  test_ocr.py  test_pixmap_fuzzer.py  test_registry.py  test_releases.py  test_settings.py  test_signatures.py  test_startup.py  test_updater_installer.py  test_util.py
vm-builder/: README.md  Vagrantfile  build-iso.sh  genapkovl-dangerzone.sh  genapkovl-dz.sh  mkimg.dz.sh  run-vm.sh
(+145 files in other folders)
