[project]
requires-python = ">=3.9,<3.14"
name = "dangerzone"
version = "0.8.1"
description = "Take potentially dangerous PDFs, office documents, or images and convert them to safe PDFs"
authors = [
    { name = "Freedom of the Press Foundation", email = "info@freedom.press" },
    { name = "Micah Lee", email = "micah.lee@theintercept.com" }, ]
license = { text = "AGPL-3.0"}

dependencies = [
    "appdirs",
    "click",
    "platformdirs",
    "colorama",
    "markdown",
    "packaging",
    "pymupdf",
    "pyside6 (>=6.7.1, < 6.8)",
    "pyxdg; sys_platform == 'linux'",
    "requests",]

dynamic = ["readme",] # "classifiers"]

classifiers = [
    "Programming Language :: Python",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Security",
]

[dependency-groups]
# Dependencies installed inside the container
container = [
    "pymupdf",
    ]

# debian = [
#     "pymupdf (>=1.24.11, <1.25)",
# ]

# Dependencies required only for development
dev = [
    "httpx",
]

# Dependencies required for linting the code.
lint = [
    "click",
    "mypy",
    "ruff",
    "types-colorama",
    "types-pyside2",
    "types-markdown",
    "types-pygments",
    "types-requests",
]

# Dependencies required for packaging the code on various platforms.
package = [
    "cx-freeze; sys_platform == 'win32'",
    "doit",
    "jinja2-cli",
    "pywin32; sys_platform == 'win32'",
    "pyinstaller; sys_platform == 'darwin'",
    "setuptools",
    "doit",
]

test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-qt",
    "pytest-rerunfailures",
    "pytest-subprocess",
    "strip-ansi",
    "numpy (>=2.0, <3.0)" # for python 3.9 compatibility
]

[project.optional-dependencies]
# Dependencies required for testing the code.
# XXX Shoul we keep ?

[project.scripts]
dangerzone = 'dangerzone:main'
dangerzone-cli = 'dangerzone:main'

[tool.doit]
verbosity = 3

[tool.ruff.lint]
select = [
    # isort
    "I",
]

[tool.setuptools.dynamic]
readme = {file = "README.md"}

[tool.hatch.build.targets.wheel]
packages = [
     "dangerzone",
]

[tool.hatch.build.targets.sdist]
include = [
     "dangerzone/*",
     "share/*",
     "qubes/*",
     "install/linux/press.freedom.dangerzone.*",
     "README.md",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
