[project]
name = "dangerzone-insecure-conversion"

version = "1.0.0"
authors = [
    {name = "Freedom of the Press Foundation",
     email = "dangerzone@freedom.press"}
]
description = "INTERNAL (insecure) Dangerzone document to pixels conversion."
readme = "README.md"
requires-python = ">3.11"
dependencies = [
    "pymupdf"
]

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "conversion"