[package]
name = "dangerzone_rust"
version = "0.1.0"
edition = "2021"
authors = ["Freedom of the Press Foundation <info@freedom.press>"]
license = "AGPL-3.0"

[dependencies]
printpdf = { version = "0.7.0", features = ["embedded_images"] }
byteorder = "1.5.0"
thiserror = "2.0.9"
image = "0.24"

[dev-dependencies]
tempfile = "3.14.0"
